--- a/RawBencher.Core/RawBencher.Core.csproj
+++ b/RawBencher.Core/RawBencher.Core.csproj
@@ -15,13 +15,13 @@
       <Compile Include="..\RawBencher\Benchers\EntityFrameworkCoreNoChangeTrackingBencher.cs" Link="Benchers\EntityFrameworkCoreNoChangeTrackingBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\EntityFrameworkCoreNormalBencher.cs" Link="Benchers\EntityFrameworkCoreNormalBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\EntityFrameworkCoreDTOBencher.cs" Link="Benchers\EntityFrameworkCoreDTOBencher.cs" />
+      <Compile Include="..\RawBencher\Benchers\EntityFrameworkNoChangeTrackingBencher.cs" Link="Benchers\EntityFrameworkNoChangeTrackingBencher.cs" />
+      <Compile Include="..\RawBencher\Benchers\EntityFrameworkNormalBencher.cs" Link="Benchers\EntityFrameworkNormalBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\FetchOnlyBencherBase.cs" Link="Benchers\FetchOnlyBencherBase.cs" />
       <Compile Include="..\RawBencher\Benchers\HandCodedBencher.cs" Link="Benchers\HandCodedBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\HandCodedBencherUsingBoxing.cs" Link="Benchers\HandCodedBencherUsingBoxing.cs" />
       <Compile Include="..\RawBencher\Benchers\HandCodedBencherUsingBoxingGetValue.cs" Link="Benchers\HandCodedBencherUsingBoxingGetValue.cs" />
-      <Compile Include="..\RawBencher\Benchers\HandCodedBencherUsingGetFieldValue.cs">
-        <Link>Benchers\HandCodedBencherUsingGetFieldValue.cs</Link>
-      </Compile>
+      <Compile Include="..\RawBencher\Benchers\HandCodedBencherUsingGetFieldValue.cs" Link="Benchers\HandCodedBencherUsingGetFieldValue.cs" />
       <Compile Include="..\RawBencher\Benchers\IBencher.cs" Link="Benchers\IBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\LINQ2DBNormalBencher.cs" Link="Benchers\LINQ2DBNormalBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\LLBLGenProNoChangeTrackingBencher.cs" Link="Benchers\LLBLGenProNoChangeTrackingBencher.cs" />
@@ -44,6 +44,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\EF6\Model\EF6.Bencher.Model.csproj" />
+      <ProjectReference Include="..\EF6\Persistence\EF6.Bencher.Persistence.csproj" />
       <ProjectReference Include="..\EFCore\EFCore.Dtos.Persistence\EFCore.Dtos.Persistence.csproj" />
       <ProjectReference Include="..\EFCore\EFCore.Dtos\EFCore.Dtos.csproj" />
       <ProjectReference Include="..\EFCore\Model\EFCore.Bencher.Model.csproj" />
@@ -58,7 +60,8 @@
     <ItemGroup>
       <PackageReference Include="Dapper" Version="2.0.35" />
       <PackageReference Include="linq2db" Version="3.1.6" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
+      <PackageReference Include="EntityFramework" Version="6.4.4" />
       <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
       <PackageReference Include="NPoco" Version="4.0.3" />
       <PackageReference Include="RepoDb" Version="1.12.4" />
