Updated to PetaPoce.Compiled and lastest version of Dapper

--- a/RawBencher.Core/RawBencher.Core.csproj
+++ b/RawBencher.Core/RawBencher.Core.csproj
@@ -33,6 +33,8 @@
       <Compile Include="..\RawBencher\Benchers\LLBLGenProResultsetCachingBencher.cs" Link="Benchers\LLBLGenProResultsetCachingBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\NPocoBencher.cs" Link="Benchers\NPocoBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\OrmLiteBencher.cs" Link="Benchers\OrmLiteBencher.cs" />
+      <Compile Include="..\RawBencher\Benchers\PetaPocoBencher.cs" Link="Benchers\PetaPocoBencher.cs" />
+      <Compile Include="..\RawBencher\Benchers\PetaPocoFastBencher.cs" Link="Benchers\PetaPocoFastBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\RawDbDataReaderBencher.cs" Link="Benchers\RawDbDataReaderBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\RepoDbPocoBencher.cs" Link="Benchers\RepoDbPocoBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\RepoDbRawSqlBencher.cs" Link="Benchers\RepoDbRawSqlBencher.cs" />
@@ -58,12 +60,14 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Dapper" Version="2.0.35" />
+      <PackageReference Include="Dapper" Version="2.0.90" />
       <PackageReference Include="linq2db" Version="3.1.6" />
+      <PackageReference Include="Microsoft.Data.SqlClient" Version="3.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
       <PackageReference Include="EntityFramework" Version="6.4.4" />
       <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
       <PackageReference Include="NPoco" Version="4.0.3" />
+      <PackageReference Include="PetaPoco.Compiled" Version="6.0.480" />
       <PackageReference Include="RepoDb" Version="1.12.4" />
       <PackageReference Include="RepoDb.SqlServer" Version="1.1.1" />
       <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.7.1" />
