Updated to latest NHibernate, changed NHibernate benchers to new format and target netstandard2.0 added NHibernate tests to Rawbencher.core

--- a/NH/DAL/Model/NH.Bencher.Model.csproj
+++ b/NH/DAL/Model/NH.Bencher.Model.csproj
@@ -1,262 +1,229 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{45DAEB56-B84D-4D7A-BF22-293F1CE07DBB}</ProjectGuid>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NH.Bencher</RootNamespace>
-    <AssemblyName>NH.Bencher.Model</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Iesi.Collections, Version=4.0.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Iesi.Collections.4.0.4\lib\net461\Iesi.Collections.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.SqlServer.Types, Version=13.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\ReferencedAssemblies\Microsoft.SqlServer.Types.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Xml" />
-    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EntityClasses\Address.cs">
+    <Compile Update="EntityClasses\Address.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\AddressType.cs">
+    <Compile Update="EntityClasses\AddressType.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\BillOfMaterial.cs">
+    <Compile Update="EntityClasses\BillOfMaterial.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\BusinessEntity.cs">
+    <Compile Update="EntityClasses\BusinessEntity.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\BusinessEntityAddress.cs">
+    <Compile Update="EntityClasses\BusinessEntityAddress.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\BusinessEntityContact.cs">
+    <Compile Update="EntityClasses\BusinessEntityContact.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\ContactCreditCard.cs">
+    <Compile Update="EntityClasses\ContactCreditCard.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\ContactType.cs">
+    <Compile Update="EntityClasses\ContactType.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\CountryRegion.cs">
+    <Compile Update="EntityClasses\CountryRegion.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\CountryRegionCurrency.cs">
+    <Compile Update="EntityClasses\CountryRegionCurrency.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\CreditCard.cs">
+    <Compile Update="EntityClasses\CreditCard.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\Culture.cs">
+    <Compile Update="EntityClasses\Culture.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\Currency.cs">
+    <Compile Update="EntityClasses\Currency.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\CurrencyRate.cs">
+    <Compile Update="EntityClasses\CurrencyRate.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\Customer.cs">
+    <Compile Update="EntityClasses\Customer.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\Department.cs">
+    <Compile Update="EntityClasses\Department.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\Document.cs">
+    <Compile Update="EntityClasses\Document.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\EmailAddress.cs">
+    <Compile Update="EntityClasses\EmailAddress.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\Employee.cs">
+    <Compile Update="EntityClasses\Employee.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\EmployeeDepartmentHistory.cs">
+    <Compile Update="EntityClasses\EmployeeDepartmentHistory.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\EmployeePayHistory.cs">
+    <Compile Update="EntityClasses\EmployeePayHistory.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\Illustration.cs">
+    <Compile Update="EntityClasses\Illustration.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\JobCandidate.cs">
+    <Compile Update="EntityClasses\JobCandidate.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\Location.cs">
+    <Compile Update="EntityClasses\Location.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\Password.cs">
+    <Compile Update="EntityClasses\Password.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\Person.cs">
+    <Compile Update="EntityClasses\Person.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\PersonPhone.cs">
+    <Compile Update="EntityClasses\PersonPhone.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\PhoneNumberType.cs">
+    <Compile Update="EntityClasses\PhoneNumberType.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\Product.cs">
+    <Compile Update="EntityClasses\Product.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\ProductCategory.cs">
+    <Compile Update="EntityClasses\ProductCategory.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\ProductCostHistory.cs">
+    <Compile Update="EntityClasses\ProductCostHistory.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\ProductDescription.cs">
+    <Compile Update="EntityClasses\ProductDescription.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\ProductDocument.cs">
+    <Compile Update="EntityClasses\ProductDocument.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\ProductInventory.cs">
+    <Compile Update="EntityClasses\ProductInventory.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\ProductListPriceHistory.cs">
+    <Compile Update="EntityClasses\ProductListPriceHistory.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\ProductModel.cs">
+    <Compile Update="EntityClasses\ProductModel.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\ProductModelIllustration.cs">
+    <Compile Update="EntityClasses\ProductModelIllustration.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\ProductModelProductDescriptionCulture.cs">
+    <Compile Update="EntityClasses\ProductModelProductDescriptionCulture.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\ProductPhoto.cs">
+    <Compile Update="EntityClasses\ProductPhoto.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\ProductProductPhoto.cs">
+    <Compile Update="EntityClasses\ProductProductPhoto.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\ProductReview.cs">
+    <Compile Update="EntityClasses\ProductReview.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\ProductSubcategory.cs">
+    <Compile Update="EntityClasses\ProductSubcategory.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\ProductVendor.cs">
+    <Compile Update="EntityClasses\ProductVendor.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\PurchaseOrderDetail.cs">
+    <Compile Update="EntityClasses\PurchaseOrderDetail.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\PurchaseOrderHeader.cs">
+    <Compile Update="EntityClasses\PurchaseOrderHeader.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\SalesOrderDetail.cs">
+    <Compile Update="EntityClasses\SalesOrderDetail.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\SalesOrderHeader.cs">
+    <Compile Update="EntityClasses\SalesOrderHeader.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\SalesOrderHeaderSalesReason.cs">
+    <Compile Update="EntityClasses\SalesOrderHeaderSalesReason.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\SalesPerson.cs">
+    <Compile Update="EntityClasses\SalesPerson.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\SalesPersonQuotaHistory.cs">
+    <Compile Update="EntityClasses\SalesPersonQuotaHistory.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\SalesReason.cs">
+    <Compile Update="EntityClasses\SalesReason.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\SalesTaxRate.cs">
+    <Compile Update="EntityClasses\SalesTaxRate.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\SalesTerritory.cs">
+    <Compile Update="EntityClasses\SalesTerritory.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\SalesTerritoryHistory.cs">
+    <Compile Update="EntityClasses\SalesTerritoryHistory.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\ScrapReason.cs">
+    <Compile Update="EntityClasses\ScrapReason.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\Shift.cs">
+    <Compile Update="EntityClasses\Shift.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\ShipMethod.cs">
+    <Compile Update="EntityClasses\ShipMethod.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\ShoppingCartItem.cs">
+    <Compile Update="EntityClasses\ShoppingCartItem.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\SpecialOffer.cs">
+    <Compile Update="EntityClasses\SpecialOffer.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\SpecialOfferProduct.cs">
+    <Compile Update="EntityClasses\SpecialOfferProduct.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\StateProvince.cs">
+    <Compile Update="EntityClasses\StateProvince.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\Store.cs">
+    <Compile Update="EntityClasses\Store.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\TransactionHistory.cs">
+    <Compile Update="EntityClasses\TransactionHistory.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\TransactionHistoryArchive.cs">
+    <Compile Update="EntityClasses\TransactionHistoryArchive.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\UnitMeasure.cs">
+    <Compile Update="EntityClasses\UnitMeasure.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\Vendor.cs">
+    <Compile Update="EntityClasses\Vendor.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\WorkOrder.cs">
+    <Compile Update="EntityClasses\WorkOrder.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="EntityClasses\WorkOrderRouting.cs">
+    <Compile Update="EntityClasses\WorkOrderRouting.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs">
+    <Compile Update="Properties\AssemblyInfo.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
   </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSHARP.Targets" />
+  <ItemGroup>
+    <PackageReference Include="Iesi.Collections" Version="4.0.4" />
+  </ItemGroup>
 </Project>
