--- a/RawBencher.Core/RawBencher.Core.csproj
+++ b/RawBencher.Core/RawBencher.Core.csproj
@@ -31,6 +31,7 @@
       <Compile Include="..\RawBencher\Benchers\LLBLGenProNormalBencher.cs" Link="Benchers\LLBLGenProNormalBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\LLBLGenProDTOBencher.cs" Link="Benchers\LLBLGenProDTOBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\LLBLGenProResultsetCachingBencher.cs" Link="Benchers\LLBLGenProResultsetCachingBencher.cs" />
+      <Compile Include="..\RawBencher\Benchers\NHibernateNormalBencher.cs" Link="Benchers\NHibernateNormalBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\NPocoBencher.cs" Link="Benchers\NPocoBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\OrmLiteBencher.cs" Link="Benchers\OrmLiteBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\PetaPocoBencher.cs" Link="Benchers\PetaPocoBencher.cs" />
@@ -57,6 +58,8 @@
       <ProjectReference Include="..\LLBLGenPro\DatabaseSpecific\AdventureWorks.Dal.AdapterDBSpecific.csproj" />
       <ProjectReference Include="..\LLBLGenPro\LLBLGenPro.Dtos.Persistence\LLBLGenPro.Dtos.Persistence.csproj" />
       <ProjectReference Include="..\LLBLGenPro\LLBLGenPro.Dtos\LLBLGenPro.Dtos.csproj" />
+      <ProjectReference Include="..\NH\DAL\Model\NH.Bencher.Model.csproj" />
+      <ProjectReference Include="..\NH\DAL\Persistence\NH.Bencher.Persistence.csproj" />
     </ItemGroup>
 
     <ItemGroup>
@@ -66,6 +69,7 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
       <PackageReference Include="EntityFramework" Version="6.4.4" />
       <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
+      <PackageReference Include="NHibernate" Version="5.3.8" />
       <PackageReference Include="NPoco" Version="4.0.3" />
       <PackageReference Include="PetaPoco.Compiled" Version="6.0.480" />
       <PackageReference Include="RepoDb" Version="1.12.4" />
